examples/test/testpolicy963.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy963
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key19: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value33
          key28: value34
          key0: value35
      podSelector:
        matchLabels:
          key49: value35
          key4: value12
          key5: value16
